--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
-        "lv_demo_widgets.h": "c"
+        "lv_demo_widgets.h": "c",
+        "lv_examples.h": "c"
     },
     "C_Cpp.errorSquiggles": "enabled"
 }
